added validation to contact-form

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -10,31 +10,41 @@
 	<p class="contact-cta">Need a Frontend developer? <span>Let's talk!</span></p>
 </div>
 <div class="contact-right-side">
-	<form (ngSubmit)="onSubmit()" name="contactForm" class="contact-form">
+	<form (ngSubmit)="onSubmit(contactForm)" #contactForm="ngForm" class="contact-form">
 		<div class="contact-form-container guests-name-container">
 			<h2>What`s your name?</h2>
-			<input [(ngModel)]="contactData.name" name="name" type="text" placeholder="Your name goes here"
-				id="guests-name">
+			<input #name="ngModel" [(ngModel)]="contactData.name" name="name" type="text"
+				placeholder="Your name goes here" id="guests-name" required>
+			@if(!name.valid && name.touched && !name.disabled) {
+			<p class="error-message">Please enter a valid name.</p>
+			}
 		</div>
 		<div class="contact-form-container guests-email-container">
 			<h2>What`s your email?</h2>
-			<input [(ngModel)]="contactData.email" name="email" type="email" placeholder="youremail@email.com"
-				id="guests-email">
+			<input #email="ngModel" [(ngModel)]="contactData.email" name="email" type="email"
+				placeholder="youremail@email.com" id="guests-email" required
+				pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}">
+			@if(!email.valid && email.touched && !email.disabled) {
+			<p class="error-message">Please enter a valid email address.</p>
+			}
 		</div>
 		<div class="contact-form-container guests-message-container">
 			<h2>How can I help you?</h2>
-			<textarea [(ngModel)]="contactData.message" name="message" placeholder="Hello Dennis, I am interested in..."
-				id="guests-message"></textarea>
+			<textarea #message="ngModel" [(ngModel)]="contactData.message" minlength="4" name="message"
+				placeholder="Hello Dennis, I am interested in..." id="guests-message" required></textarea>
+			@if(!message.valid && message.touched && !message.disabled) {
+			<p class="error-message">Please enter a valid message.</p>
+			}
 		</div>
 		<div class="confirm-policy-container">
 			<div id="confirm-policy-checkbox">
 				<img src="assets/icons/check_box_default.png" alt="Checkbox">
 			</div>
-			<label for="confirm-policy">I`ve read the <span>privacy policy</span> and agree to the processing of my data
+			<label>I`ve read the <span>privacy policy</span> and agree to the processing of my data
 				as outlined. </label>
 		</div>
 		<div class="contact-form-container contact-btn-container">
-			<button class="primary-btn"><span>Say Hello ;)</span> <input type="submit" value="Submit"></button>
+			<input class="primary-btn" type="submit" value="Say Hello ;)">
 		</div>
 
 	</form>
