added hover-effects to footer-links

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -17,8 +17,21 @@
 	<p id="footer-copyright">© 2025 Dennis Jakobi</p>
 </div>
 <div class="footer-parts">
-	<a href="https://github.com/DennisJakobi76" target="_blank">Github</a>
-	<a href="https://www.linkedin.com/in/dennis-jakobi-84372818b" target="_blank">LinkedIn</a>
-	<a href="mailto:dennis.jakobi76@gmail.com">Email</a>
-	<a href="*" target="_blank">Legal Notice</a>
+	<div class="footer-link-wrapper">
+		<img src="assets/icons/link_check_radio_button.png" alt="Point">
+		<a href="https://github.com/DennisJakobi76" target="_blank">Github</a>
+	</div>
+	<div class="footer-link-wrapper">
+		<img src="assets/icons/link_check_radio_button.png" alt="Point">
+		<a href="https://www.linkedin.com/in/dennis-jakobi-84372818b" target="_blank">LinkedIn</a>
+	</div>
+	<div class="footer-link-wrapper">
+		<img src="assets/icons/link_check_radio_button.png" alt="Point">
+		<a href="mailto:dennis.jakobi76@gmail.com">Email</a>
+	</div>
+	<div class="footer-link-wrapper">
+		<img src="assets/icons/link_check_radio_button.png" alt="Point">
+		<a href="*" target="_blank">Legal Notice</a>
+	</div>
+
 </div>
