--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -3,10 +3,11 @@
 
 	<h2 class="contact-headline">Let's work together</h2>
 	<p class="contact-subtitle">Got a problem to solve?</p>
-	<p class="contact-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam delectus hic praesentium
-		voluptatum illo
-		ducimus mollitia, veniam at eius vitae ipsam? Nostrum obcaecati consequatur provident eum, modi eligendi culpa
-		numquam!</p>
+	<p class="contact-text">Whether you have an idea ready to come to life or you're facing a technical challenge – I'm
+		here to help. With a passion for modern web technologies and a focus on tailored solutions, I’ll support you in
+		bringing your project to success.<br><br>
+		<span>Let’s build something great together!</span>
+	</p>
 	<p class="contact-cta">Need a Frontend developer? <span>Let's talk!</span></p>
 </div>
 <div class="contact-right-side">
@@ -44,7 +45,8 @@
 
 		<div class="confirm-policy-container">
 			<div id="confirm-policy-checkbox">
-				<img src="assets/icons/check_box_default.png" alt="Checkbox">
+				<img [src]="confirmedPolicy ? 'assets/icons/check_box_checked_default.png' : 'assets/icons/check_box_default.png'"
+					alt="Checkbox" (click)="togglePolicy()">
 			</div>
 			<label>I`ve read the <span>privacy policy</span> and agree to the processing of my data as
 				outlined.</label>
