changed Frontend to Fullstack in hero-component and marquee-component

--- a/src/app/hero/marquee/marquee.component.html
+++ b/src/app/hero/marquee/marquee.component.html
@@ -1,4 +1,4 @@
 <div class="hero-marquee">
-	<span>* Frontend Developer * Employed And Happy * Based In North Rhine-Westphalia * Open To Interesting
+	<span>* Fullstack Developer * Employed And Happy * Based In North Rhine-Westphalia * Open To Interesting
 		Contacts *</span>
 </div>
