--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -6,7 +6,7 @@
 			<div class="hero-container-seperator"></div>
 		</div>
 		<div class="hero-container-center">
-			<h2>Frontend Developer</h2>
+			<h2>Fullstack Developer</h2>
 			<h1>Dennis Jakobi</h1>
 			<div class="title-button-container">
 				<a href="#featured-projects">
