--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@
   --banner-bg: #434343;
   --cursor-shadow-color: rgba(48, 112, 102, 1);
   --white-text: rgba(255, 255, 255, 1);
+  --error-color: rgba(236, 123, 123, 0.8);
 
   --x: 50%;
   --y: 50%;
