--- a/src/app/hero/hero.component.scss
+++ b/src/app/hero/hero.component.scss
@@ -58,6 +58,12 @@ main {
     cursor: pointer;
     background-image: url("../../../public/assets/img/scroll_btn_hover.png");
   }
+
+  > a {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .hero-container-seperator {
