--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -31,7 +31,7 @@
 	</div>
 	<div class="footer-link-wrapper">
 		<img src="assets/icons/link_check_radio_button.png" alt="Point">
-		<a href="*" target="_blank">Legal Notice</a>
+		<a href="#" (click)="showImprint($event)">Legal Notice</a>
 	</div>
 
 </div>
