added privacy policy

--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -5,17 +5,9 @@
 		</div>
 	</div>
 
+	<div class="content-wrapper">
+		<ng-content></ng-content>
+	</div>
 
-	<h1 class="imprint-title">Imprint</h1>
-	<div class="imprint-content">
-		<p>Dennis Jakobi<br />
-			Gartenstraße 90<br />45699 Herten</p>
-	</div>
-	<div>
-		<p>
-			Telefon: +4917687903079<br />
-			E-Mail:
-			<a href="mailto:dennis.jakobi76@gmail.com">dennis.jakobi76&#64;gmail.com</a><br />
-		</p>
-	</div>
+
 </div>
