--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,1 +1,8 @@
-
+.legal-notice {
+  display: flex;
+  flex-direction: column;
+  gap: 48px;
+  justify-content: center;
+  align-items: center;
+  height: 500px;
+}
