added functionality to change language-icon in header

--- a/src/app/hero/header/header.component.html
+++ b/src/app/hero/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="header-button-container">
-	<div class="header-button" id="language-switch"></div>
+	<div class="header-button" id="language-switch" (click)="toggleLanguage()" [class.german]="isGerman"></div>
 	<div class="link-point-wrapper">
 		<div class="header-button">
 			<a href="#about-me-container">About me</a>
