--- a/src/app/hero/marquee/marquee.component.html
+++ b/src/app/hero/marquee/marquee.component.html
@@ -1,4 +1,3 @@
 <div class="hero-marquee">
-	<span>* Fullstack Developer * Employed And Happy * Based In North Rhine-Westphalia * Open To Interesting
-		Contacts *</span>
+	<span>{{ translationService.getTranslation('marquee', 'content') }}</span>
 </div>
