--- a/src/styles.scss
+++ b/src/styles.scss
@@ -78,17 +78,27 @@ a {
 .primary-btn {
   border: 1px solid rgba(255, 255, 255, 1);
   background: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 160px;
   height: 48px;
-  padding: 0 24px 0 24px;
+  padding: 0 24px;
   color: var(--primary-font-color);
   border-radius: 100px;
   gap: 10px;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
+  white-space: nowrap;
 
   &:hover {
     border-color: var(--active-font-color);
     color: var(--active-font-color);
+  }
+
+  span {
+    width: 100%;
+    text-align: center;
   }
 }
 
