added translation to technologies-component

--- a/src/app/technologies/technologies.component.html
+++ b/src/app/technologies/technologies.component.html
@@ -1,21 +1,19 @@
 <div class="technologies-container">
 	<div id="technologies-content-container" class="technologies-content-container">
-		<app-info-card title="Technologies" headline="Skill Set">
-			<p>I’m passionate about working with modern front-end technologies such as HTML, CSS, JavaScript,
-				TypeScript,
-				Angular, and SCSS. I also bring experience in backend development, especially with C#, .NET, and
-				databases
-				using SQL. For me, keeping up with the latest developments isn’t just important – I genuinely enjoy
-				exploring new technologies and continuously growing my skill set. I see the rapid changes in web
-				development
-				as an exciting opportunity to keep learning and evolving.</p>
-			<h2 id="another-skill">You need <span id="another-skill-span">another skill?</span></h2>
-			<p>Feel free to contact me. I look forward to<br> expanding on my previous knowledge.</p>
+		<app-info-card [title]="translationService.getTranslation('technologies', 'title')"
+			[headline]="translationService.getTranslation('technologies', 'headline')">
+			<p>{{ translationService.getTranslation('technologies', 'description') }}</p>
+			<h2 id="another-skill">
+				{{ translationService.getTranslation('technologies', 'needSkill') }}
+				<span id="another-skill-span">{{ translationService.getTranslation('technologies', 'anotherSkill')
+					}}</span>
+			</h2>
+			<p>{{ translationService.getTranslation('technologies', 'contactText') }}</p>
 			<div class="another-skill-button-container">
-				<button class="primary-btn"><span>Let`s Talk</span></button>
+				<button class="primary-btn">
+					<span>{{ translationService.getTranslation('technologies', 'letsTalk') }}</span>
+				</button>
 			</div>
-
-
 		</app-info-card>
 		<div class="tech-skill-icon-container">
 			<ng-container *ngFor="let skillIcon of skillIcons; let i = index">
